--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: test post
+title: Writing a simple chat server with socket.io
 ---
 
-## Test post
+## Writing a simple chat server with Socket.io
