--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -1,10 +1,7 @@
 ---
 layout: post
 title: Writing a simple chat server with socket.io
+excerpt: Socket.io is an incredible JavaScript library for networking; by running it on node.js as a server, and in a web browser as a client, we can easily create a 'chat' application that allows for communication between several users.
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dolor felis, bibendum nec ante id, bibendum hendrerit arcu. Donec vel tincidunt magna. Donec et mi tincidunt, aliquet velit eget, mattis ligula. Nunc non odio dui. Suspendisse ut ipsum id nibh imperdiet feugiat. Fusce blandit augue ut auctor fermentum. Nullam commodo enim at gravida vulputate. Nulla facilisi.
-
-Donec mattis est id dui elementum, vitae vestibulum diam rhoncus. Maecenas at nibh tortor. Cras sed augue pulvinar, iaculis orci dictum, placerat urna. Mauris libero nisi, vulputate ut convallis eget, cursus ut mi. Etiam enim ligula, porttitor ut vestibulum sit amet, interdum nec velit. Curabitur condimentum urna in nulla consequat venenatis. Vestibulum sollicitudin semper ullamcorper. Vestibulum sed felis eget ipsum scelerisque posuere at sit amet elit. Cras erat erat, convallis in neque at, volutpat cursus metus. Fusce nec nisi viverra, gravida ligula sit amet, lacinia massa. Integer orci est, lacinia non erat eget, vestibulum vestibulum tortor. Sed non massa ornare, mollis lacus in, accumsan purus. Praesent in ullamcorper tortor, quis lacinia leo. Aliquam erat volutpat. Ut in enim et nunc ullamcorper semper.
-
-Nullam dictum, erat quis dignissim pretium, magna libero volutpat leo, id volutpat justo nisi et arcu. Nunc sed gravida ex, viverra ultrices magna. Sed sit amet ex viverra, elementum magna eu, placerat lectus. In imperdiet mollis quam ut bibendum. Aenean nec facilisis mi. Proin faucibus sapien id egestas viverra. Nulla facilisi. Vestibulum sed augue pulvinar, iaculis neque ac, faucibus urna. Aenean pretium pretium fringilla. In tincidunt luctus vestibulum. Nam euismod, mauris lobortis egestas volutpat, quam lorem egestas nisi, eget imperdiet tortor libero ut nisi. In consequat lorem tellus, nec luctus elit porttitor nec. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur vel sodales libero. Mauris posuere imperdiet ipsum vitae malesuada. Nulla ornare cursus arcu, et consectetur eros interdum vel.
+[Socket.io](http://socket.io) is an incredible JavaScript library for high-performance networking; by running it on node.js as a server, and in a web browser as a client, we can easily create a 'chat' application that allows for communication between several users.
