--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -6,10 +6,10 @@ excerpt: Socket.io is an incredible JavaScript library for networking; by runnin
 
 [Socket.io](http://socket.io) is an incredible JavaScript library for high-performance networking; by running it on node.js as a server, and in a web browser as a client, we can easily create a 'chat' application that allows for communication between several users.
 
-To get started, install [node](https://nodejs.org) on your machine and install the socket.io package:
+To get started, install [node](https://nodejs.org) on your machine and install the [socket.io] package:
 
-    \> npm install socket.io
+    $ npm install socket.io
 
-You'll also want to install the express package:
+You'll also want to install the [express] for serving web pages:
 
-    \> npm install express
+    $ npm install express
