--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -13,3 +13,13 @@ To get started, install [node](https://nodejs.org) on your machine and get the `
 You'll also want to install `express` for serving web pages:
 
     > npm install express
+
+Sample JavaScript foo text:
+
+```js
+for(var i = 0; i < 45; i ++) {
+  for(var j = 0; j < i * 3 + 2; j ++) {
+    alert('a');
+  }
+}
+```
