--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -16,11 +16,7 @@ You'll also want to install `express` for serving web pages:
 
 Sample JavaScript foo text:
 
-~~~ javascript
-for(var i = 0; i < 45; i ++) {
-  for(var j = 0; j < i * 3 + 2; j ++) {
-    alert('a');
-  }
-}
-{: .language-ruby}
-~~~
+```python
+a = r1.step(x)
+b = r2.step(y)
+```
