--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -16,7 +16,6 @@ You'll also want to install `express` for serving web pages:
 
 Sample JavaScript foo text:
 
-```python
-a = r1.step(x)
-b = r2.step(y)
+``` JavaScript
+alert('foo code');
 ```
