--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -14,8 +14,15 @@ You'll also want to install `express` for serving web pages:
 
     > npm install express
 
-Sample JavaScript foo text:
+Sample python text, kramdown please work
 
-``` JavaScript
-alert('foo code');
+```python
+class RNN:
+  # ...
+  def step(self, x):
+    # update the hidden state
+    self.h = np.tanh(np.dot(self.W_hh, self.h) + np.dot(self.W_xh, x))
+    # compute the output vector
+    y = np.dot(self.W_hy, self.h)
+    return y
 ```
