--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -8,11 +8,15 @@ excerpt: Socket.io is an incredible JavaScript library for networking; by runnin
 
 To get started, install [node](https://nodejs.org) on your machine and get the `socket.io` package:
 
-    > npm install socket.io
+```shell
+> npm install socket.io
+```
 
 You'll also want to install `express` for serving web pages:
 
-    > npm install express
+```shell
+> npm install express
+```
 
 Sample python text, kramdown please work
 
