--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -9,13 +9,13 @@ excerpt: Socket.io is an incredible JavaScript library for networking; by runnin
 To get started, install [node](https://nodejs.org) on your machine and get the `socket.io` package:
 
 ```shell
-> npm install socket.io
+$ npm install socket.io
 ```
 
 You'll also want to install `express` for serving web pages:
 
 ```shell
-> npm install express
+$ npm install express
 ```
 
 Sample python text, kramdown please work
