--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -8,13 +8,13 @@ excerpt: Socket.io is an incredible JavaScript library for networking; by runnin
 
 To get started, install [node](https://nodejs.org) on your machine and get the `socket.io` package:
 
-```shell
+```bash
 $ npm install socket.io
 ```
 
 You'll also want to install `express` for serving web pages:
 
-```shell
+```bash
 $ npm install express
 ```
 
