--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -18,7 +18,7 @@ You'll also want to install `express` for serving web pages:
 $ npm install express
 ```
 
-Sample python text, kramdown please work
+Sample python text, lines please don't wrap
 
 ```python
 class RNN:
