--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -18,15 +18,22 @@ You'll also want to install `express` for serving web pages:
 $ npm install express
 ```
 
-Sample python text, lines please don't wrap
+Sample foo code
 
-```python
-class RNN:
-  # ...
-  def step(self, x):
-    # update the hidden state
-    self.h = np.tanh(np.dot(self.W_hh, self.h) + np.dot(self.W_xh, x))
-    # compute the output vector
-    y = np.dot(self.W_hy, self.h)
-    return y
+```c++
+// adjust the weights based on their gradients. uses RMSprop for learning rate adjustment
+void NVector::learn(float learningRate) {
+	size_t localSize = 16;
+	size_t globalSize = ceil(numNeurons / (float)localSize) * localSize;
+	for (int i = 0; i < connections.size(); i++) {
+		clSetKernelArg(RNN::learnKernel, 0, sizeof(cl_mem), &weightsMem[i]);
+		clSetKernelArg(RNN::learnKernel, 1, sizeof(cl_mem), &weightDerivativesMem[i]);
+		clSetKernelArg(RNN::learnKernel, 2, sizeof(cl_mem), &rmsesMem[i]);
+		clSetKernelArg(RNN::learnKernel, 3, sizeof(int), &numNeurons);
+		clSetKernelArg(RNN::learnKernel, 4, sizeof(int), &(connections[i]->numNeurons));
+		clSetKernelArg(RNN::learnKernel, 5, sizeof(float), &learningRate);
+		clEnqueueNDRangeKernel(RNN::clQueue, RNN::learnKernel, 1, NULL, &globalSize, &localSize, 0, NULL, NULL);
+		clFinish(RNN::clQueue);
+	}
+}
 ```
