finally some content

--- a/_posts/2016-12-25-blog.md
+++ b/_posts/2016-12-25-blog.md
@@ -4,6 +4,4 @@ title: "Setting up a blog with Bootstrap, Jekyll, and Pygments"
 excerpt: "Setting up a blog with Jekyll (through Github Pages) can be a large time investment, but..."
 ---
 
-Setting up a blog with Jekyll (through Github Pages) can be a large time investment, but...
-
-More example text
+This is just a filler post to make sure the main blog page lists posts correctly. There should be some actual content here soon about how this blog was made, but for the time being this is a meaningless post.
