--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -6,14 +6,22 @@ excerpt: "Socket.io is an incredible JavaScript library for networking; by runni
 
 [Socket.io](http://socket.io) is an incredible JavaScript library for high-performance networking; by running it on node.js as a server, and in a web browser as a client, we can easily create a 'chat' application that allows for communication between several users.
 
-To get started, install [node](https://nodejs.org) on your machine and get the `socket.io` package:
+To get started, install [node.js](https://nodejs.org) on your machine and get the `socket.io` package. By default, node installs packages to your working directory, so make sure that you're in your project folder:
 
-```shell
+``` shell
 $ npm install socket.io
 ```
 
 You'll also want to install `express` for serving web pages:
 
-```shell
+``` shell
 $ npm install express
+```
+
+Some initial setup for our server:
+
+``` js
+var express = require('express')();
+var http = require('http').Server(express);
+var io = require('socket.io')(http);
 ```
