socket.io chat room

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -18,10 +18,29 @@ You'll also want to install `express` for serving web pages:
 $ npm install express
 ```
 
-Some initial setup for our server:
+We're going to use express to set up a small HTTP server, and use it to serve a single webpage which'll act as a frontend to our chat room. Some initial setup:
 
 ``` js
 var express = require('express')();
 var http = require('http').Server(express);
 var io = require('socket.io')(http);
+```
+
+Express allows us to set the response to HTTP GET requests for various pages. We'll send a client HTML file for the root page, and provide a JavaScript file `client.js` to go along with it:
+
+``` js
+express.get('/', function(request, result) {
+  result.sendFile(__dirname + '/client.html');
+});
+express.get('/client.js', function(request, result) {
+  result.sendFile(__dirname + '/client.js');
+});
+```
+
+Open the HTTP server on port 4444:
+
+``` js
+http.listen('4444', function() {
+  console.log('listening for requests...');
+});
 ```
