socket.io chat room

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -39,7 +39,7 @@ express.get('/client.js', function(request, result) {
 
 Open the HTTP server on port 4444:
 
-``` JavaScript
+``` javascript
 http.listen('4444', function() {
   console.log('listening for requests...');
 });
