socket.io chat room

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -28,7 +28,7 @@ var io = require('socket.io')(http);
 
 Express allows us to set the response to HTTP GET requests for various pages. We'll send a client HTML file for the root page, and provide a JavaScript file `client.js` to go along with it:
 
-``` JavaScript
+``` javascript
 express.get('/', function(request, result) {
   result.sendFile(__dirname + '/client.html');
 });
