socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -28,7 +28,7 @@ var io = require('socket.io')(http);
 
 Express allows us to set the response to HTTP GET requests for various pages. We'll send a client HTML file for the root page, and provide a JavaScript file `client.js` to go along with it:
 
-``` javascript
+``` js
 express.get('/', function(request, result) {
   result.sendFile(__dirname + '/client.html');
 });
@@ -39,8 +39,16 @@ express.get('/client.js', function(request, result) {
 
 Open the HTTP server on port 4444:
 
-``` javascript
+``` js
 http.listen('4444', function() {
   console.log('listening for requests...');
+});
+```
+
+Like just about everything in node, socket.io uses an event-based model to drive interaction. `io.on()` takes an event name as its first argument; the 'connection' event is fired when a socket.io client first connects to the server. The handler receives a socket object to represent the connection:
+
+``` js
+io.on('connection', function(socket) {
+  // do something with the socket...
 });
 ```
