socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -26,7 +26,7 @@ var http = require('http').Server(express);
 var io = require('socket.io')(http);
 ```
 
-Express allows us to set the response to HTTP GET requests for various pages. We'll send a client HTML file for the root page, and provide a JavaScript file `client.js` to go along with it:
+Express allows us to set the response to HTTP GET requests for various pages. We'll send a client HTML file for the root page, and provide a JavaScript file client.js to go along with it:
 
 ``` js
 express.get('/', function(request, result) {
@@ -37,7 +37,7 @@ express.get('/client.js', function(request, result) {
 });
 ```
 
-Open the HTTP server on port 4444:
+We'll create these files later. For now, open the HTTP server on port 4444:
 
 ``` js
 http.listen('4444', function() {
@@ -47,8 +47,17 @@ http.listen('4444', function() {
 
 Like just about everything in node, socket.io uses an event-based model to drive interaction. `io.on()` takes an event name as its first argument; the 'connection' event is fired when a socket.io client first connects to the server. The handler receives a socket object to represent the connection:
 
-``` js
+~~~ js
 io.on('connection', function(socket) {
   // do something with the socket...
 });
-```
+~~~
+
+`socket.on()` will run a function every time the server receives an event from the client that socket represents. We can name events whatever we like; we'll have the socket receive 'chat' messages and echo them back to all the connected clients:
+
+~~~ js
+socket.on('chat', function(message) {
+  console.log('message received, content: ' + message);
+  io.emit('chat', message);
+});
+~~~
