socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -56,8 +56,10 @@ io.on('connection', function(socket) {
 `socket.on()` will run a function every time the server receives an event from the client that socket represents. We can name events whatever we like; we'll have the socket receive 'chat' messages and echo them back to all the connected clients:
 
 ~~~ js
-socket.on('chat', function(message) {
-  console.log('message received, content: ' + message);
-  io.emit('chat', message);
+io.on('connection', function(socket) {
+  socket.on('chat', function(message) {
+    console.log('message received, content: ' + message);
+    io.emit('chat', message);
+  });
 });
 ~~~
