socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -63,3 +63,47 @@ io.on('connection', function(socket) {
   });
 });
 ~~~
+
+Now we need to shift to the client side. For `client.html`, use this:
+
+~~~ html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ site.url }}/darkly.css">
+    <title>{{ page.title }}</title>
+</head>
+<body>
+  <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
+    <span class="navbar-brand" style="color: #222;">
+      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
+       /
+      <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
+    </span>
+  </nav>
+
+  <br />
+  <br />
+  <br />
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h2>{{ page.title }}</h2>
+        <hr />
+        {{ content }}
+        <br />
+        <small class="text-muted">Generated {{ site.time }}</small>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+  </div>
+
+  <script src="{{ site.url }}/bootstrap/js/bootstrap.min.js"></script>
+</body>
+</html>
+~~~
