socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -67,43 +67,25 @@ io.on('connection', function(socket) {
 Now we need to shift to the client side. For `client.html`, use this:
 
 ~~~ html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ site.url }}/darkly.css">
-    <title>{{ page.title }}</title>
-</head>
-<body>
-  <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
-    <span class="navbar-brand" style="color: #222;">
-      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
-       /
-      <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
-    </span>
-  </nav>
-
-  <br />
-  <br />
-  <br />
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8">
-        <h2>{{ page.title }}</h2>
-        <hr />
-        {{ content }}
-        <br />
-        <small class="text-muted">Generated {{ site.time }}</small>
-      </div>
-      <div class="col-md-2"></div>
+    <title>chat room</title>
+  </head>
+  <body onload="setup();">
+    <div class="container">
+      <br />
+      <h2>socket.io chat room</h2>
+      <hr />
+      <div id="chatContent"></div>
+      <script src="client.js"></script>
+      <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+      <hr />
+      <input id="messageInput" type="text"></input>
+      <button onclick="send();">Send</button>
     </div>
-  </div>
-
-  <script src="{{ site.url }}/bootstrap/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
 ~~~
