socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -64,7 +64,7 @@ io.on('connection', function(socket) {
 });
 ~~~
 
-Now we need to shift to the client side. For `client.html`, use this:
+Now we need to shift to the client side. We'll use this for our `client.html`:
 
 ~~~ html
 <html>
