socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -79,13 +79,26 @@ Now we need to shift to the client side. We'll use this for our `client.html`:
       <h2>socket.io chat room</h2>
       <hr />
       <div id="chatContent"></div>
-      <script src="client.js"></script>
-      <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
       <hr />
       <input id="messageInput" type="text"></input>
       <button onclick="send();">Send</button>
+      <script src="client.js"></script>
+      <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
     </div>
   </body>
 </html>
+~~~
+
+Twitter's [Bootstrap](http://getbootstrap.com/) is used here for cleanliness and mobile support. In `client.js`, set up the socket.io client once the page loads:
+
+~~~ js
+function setup() {
+  socket = io(); // load the socket.io client
+
+  // called when a 'chat' event is received, add a <p> with the message to the chat div
+  socket.on('chat', function(message) {
+    document.getElementById('chatContent').innerHTML += '<p>' + message + '</p>';
+  });
+}
 ~~~
