socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -102,3 +102,11 @@ function setup() {
   });
 }
 ~~~
+
+`socket.emit()` sends a message to the server so that it can be relayed to other clients. When the user clicks the send button:
+
+~~~ js
+function send() {
+  socket.emit('chat', document.getElementById('messageInput').value);
+}
+~~~
