--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -18,7 +18,7 @@ You'll also want to install `express` for serving web pages:
 $ npm install express
 ```
 
-We're going to use express to set up a small HTTP server, and use it to serve a single webpage which'll act as a frontend to our chat room. Some initial setup:
+We're going to use express to set up a small HTTP server, and use it to serve a single webpage which'll act as a frontend to our chat room. Some initial setup in our `server.js`:
 
 ``` js
 var express = require('express')();
@@ -108,5 +108,12 @@ function setup() {
 ~~~ js
 function send() {
   socket.emit('chat', document.getElementById('messageInput').value);
+  document.getElementById('messageInput').value = '';
 }
+~~~
+
+At this point our setup is bordering complete. Start the server:
+
+~~~ sh
+$ node server
 ~~~
