socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -117,3 +117,7 @@ At this point our setup is bordering complete. Start the server:
 ~~~ sh
 $ node server
 ~~~
+
+<img src="{{ site.url }}/assets/.jpeg" style="border:none;">
+
+Hopefully this image loads, ugh...
