socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -118,6 +118,6 @@ At this point our setup is bordering complete. Start the server:
 $ node server
 ~~~
 
-<img src="{{ site.url }}/assets/.jpeg" style="border:none;">
+<img src="{{ site.url }}/assets/socket-io-chat-web.png" style="border:none;">
 
 Hopefully this image loads, ugh...
