socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -118,6 +118,37 @@ At this point our setup is bordering complete. Start the server:
 $ node server
 ~~~
 
+At this point, you should be able to point your web browser to `localhost:4444` and get something that resembles this:
+
 <img src="{{ site.url }}/assets/socket-io-chat-web.png" style="border:none; width: 100%;">
 
-Hopefully this image loads, ugh...
+Our application is almost complete; you should be able to send messages and receive them on connected clients. You'll notice that there isn't any identifier showing what messages are from what users; we need to supply more information than just a message to the server when a user clicks send. Get a username string upon startup:
+
+~~~ js
+var username = window.prompt('Enter a username:', '');
+~~~
+
+Socket.io allows us to pass an arbitrary number of parameters of just about any type as a message; in our `send()` add in a second additional parameter after the event type:
+
+~~~ js
+socket.emit('chat', document.getElementById('messageInput').value, username);
+~~~
+
+In our `server.js`, receiving this second bit of data is as easy as adding a second parameter to the callback in `socket.on()`:
+
+~~~ js
+socket.on('chat', function(message, username) {
+  console.log('message received, sent by: ' + username + ', content: ' + message);
+  io.emit('chat', message, username);
+});
+~~~
+
+This second parameter is emitted back to `client.js`, where we also need to receive the username parameter:
+
+~~~ js
+// italicize usernames in chat, distinguish your own username with <b>
+var format = 'i';
+if(author == username) format = 'b';
+
+document.getElementById('chatContent').innerHTML += '<p><' + format + '>' + author + '</' + format + '> | ' + message + '</p>';
+~~~
