--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -146,9 +146,13 @@ socket.on('chat', function(message, username) {
 This second parameter is emitted back to `client.js`, where we also need to receive the username parameter:
 
 ~~~ js
-// italicize usernames in chat, distinguish your own username with <b>
-var format = 'i';
-if(author == username) format = 'b';
+socket.on('chat', function(author, message) {
+  // italicize usernames in chat, distinguish your own username with <b>
+  var format = 'i';
+  if(author == username) format = 'b';
 
-document.getElementById('chatContent').innerHTML += '<p><' + format + '>' + author + '</' + format + '> | ' + message + '</p>';
+  document.getElementById('chatContent').innerHTML += '<p><' + format + '>' + author + '</' + format + '> | ' + message + '</p>';
+});
 ~~~
+
+That should be everything; you should be prompted for a username and it should display upon messaging in the chat. If your code doesn't work, you can always refer to the repository for this tutorial [here](https://github.com/lnpalmer/socket-io-chat).
