socket.io chat server

--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -156,3 +156,5 @@ socket.on('chat', function(author, message) {
 ~~~
 
 That should be everything; you should be prompted for a username and it should display upon messaging in the chat. If your code doesn't work, you can always refer to the repository for this tutorial [here](https://github.com/lnpalmer/socket-io-chat).
+
+*This tutorial is based on socket.io's own chat room tutorial. If you have any feedback about the clarity or formatting of this post, please direct it to lukas.palmer.dev@gmail.com*
