--- a/_posts/2016-12-23-chat.md
+++ b/_posts/2016-12-23-chat.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Writing a simple chat server with socket.io"
 excerpt: "Socket.io is an incredible JavaScript library for networking; by running it on node.js as a server, and in a web browser as a client, we can easily create a 'chat' application that allows for communication between several users."
+ready: true
 ---
 
 [Socket.io](http://socket.io) is an incredible JavaScript library for high-performance networking; by running it on node.js as a server, and in a web browser as a client, we can easily create a 'chat' application that allows for communication between several users.
