--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -4,3 +4,5 @@ title: "Getting started with WebGL"
 excerpt: "..."
 ready: false
 ---
+
+OpenGL is an incredibly powerful 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment.
