--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -6,3 +6,35 @@ ready: false
 ---
 
 OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment.
+
+To get started, populate an `index.html` file with the following:
+
+~~~ html
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      body {
+        margin: 0px;
+        position: fixed;
+        background-color: #000;
+      }
+      html, body {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+      }
+      canvas {
+        position: absolute;
+      }
+    </style>
+    <title>WebGL Intro</title>
+  </head>
+  <body onload="setup();">
+    <canvas id="glCanvas" width="100px;" height="100px;"></canvas>
+    <script src="main.js"></script>
+  </body>
+</html>
+~~~
+
+This gives us an HTML5 `<canvas>` to display our WebGL content with. With the help of the embedded CSS, our canvas will fill the entire page; a little Javascript will address this later as it cannot be done directly through HTML attributes.
