--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -37,4 +37,17 @@ To get started, populate an `index.html` file with the following:
 </html>
 ~~~
 
-This gives us an HTML5 `<canvas>` to display our WebGL content with. With the help of the embedded CSS, our canvas will fill the entire page; a little Javascript will address this later as it cannot be done directly through HTML attributes.
+This gives us an HTML5 `<canvas>` to display our WebGL content with. With the help of the embedded CSS, our canvas will fill the entire page; a little JavaScript will address this later as the canvas cannot be scaled directly through HTML attributes.
+
+In our `main.js` we need to implement some initial setup. To do anything with WebGL, we need to get a WebGL context associated with our canvas:
+
+~~~ JavaScript
+// store both of these for later use
+var canvas;
+var gl;
+
+function setup() {
+  canvas = document.getElementById("glCanvas");
+  gl = canvas.getContext("experimental-webgl", {antialias: true});
+}
+~~~
