--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -5,7 +5,7 @@ excerpt: "..."
 ready: false
 ---
 
-OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment. We're going to use WebGL to render a triangle; this on its own will take a good amount of setup, but from here there it doesn't take much more work to build more advanced things.
+OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment. At the end of this tutorial we'll have code to render a triangle; this on its own will take a good amount of setup, but from there it doesn't take much more work to build more advanced things.
 
 To get started, populate an `index.html` file with the following:
 
