--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -51,3 +51,9 @@ function setup() {
   gl = canvas.getContext("experimental-webgl", {antialias: true});
 }
 ~~~
+
+Now that we have a WebGL context, we can start making calls with it. In our `setup()`:
+
+~~~ js
+gl.clearColor(.05, .23, .3, 1); // set the background color
+~~~
