--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -52,8 +52,15 @@ function setup() {
 }
 ~~~
 
-Now that we have a WebGL context, we can start making calls with it. In our `setup()`:
+We need some way of defining our triangle to WebGL; we need to represent it as a (flat) array of 2D coordinates. We'll make an equilateral triangle:
 
 ~~~ js
-gl.clearColor(.05, .23, .3, 1); // set the background color
+var triangleMesh = [
+  // first point, x = -1, y = -.866
+  -1, -.866,
+  // second point, x = 1, y = -.866
+  1, -.866,
+  // and so on
+  0, 1,
+];
 ~~~
