--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -45,10 +45,18 @@ In our `main.js` we need to implement some initial setup. To do anything with We
 // store both of these for later use
 var canvas;
 var gl;
+var program;
+var attrPosition;
+var attrColor;
+var unfmScale;
+var unfmAspect;
+var triangleBuffer;
 
 function setup() {
   canvas = document.getElementById("glCanvas");
   gl = canvas.getContext("experimental-webgl", {antialias: true});
+
+  gl.clearColor(.05, .23, .3, 1); // set the background color to clear with
 }
 ~~~
 
@@ -63,4 +71,13 @@ var triangleMesh = [
   // and so on
   0, 1,
 ];
+~~~
+
+OpenGL / WebGL has 'buffer' objects that allow us to store data on the graphics card for rendering; in our `setup()` we'll create a buffer and upload our mesh to it:
+
+~~~ js
+// create a buffer on the GPU and upload the triangle mesh to it
+triangleBuffer = gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
+gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(triangleMesh), gl.STATIC_DRAW);
 ~~~
