--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -5,9 +5,9 @@ excerpt: "..."
 ready: false
 ---
 
-OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment. At the end of this tutorial we'll have code to render a triangle; this on its own will take a good amount of setup, but from there it doesn't take much more work to build more advanced things.
+OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment. At the end of this tutorial we'll have code to render a triangle; on its own this will take a good amount of setup, but from there it doesn't take much more work to build more advanced things.
 
-To get started, populate an `index.html` file with the following:
+Populate an `index.html` file with the following:
 
 ~~~ html
 <!DOCTYPE html>
@@ -42,7 +42,6 @@ This gives us an HTML5 `<canvas>` to display our WebGL content with. With the he
 In our `main.js` we need to implement some initial setup. To do anything with WebGL, we need to get a WebGL context associated with our canvas:
 
 ~~~ js
-// store both of these for later use
 var canvas;
 var gl;
 var program;
@@ -60,7 +59,7 @@ function setup() {
 }
 ~~~
 
-We need some way of defining our triangle to WebGL; we need to represent it as a (flat) array of 2D coordinates. We'll make an equilateral triangle:
+We need some way of defining our triangle to WebGL; in this case we'll represent it as a (flat) array of 2D coordinates that define the three points of the triangle. We'll make an equilateral triangle:
 
 ~~~ js
 var triangleMesh = [
@@ -80,4 +79,30 @@ OpenGL / WebGL has 'buffer' objects that allow us to store data on the graphics 
 triangleBuffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(triangleMesh), gl.STATIC_DRAW);
+~~~
+
+In modern graphics frameworks, 'shaders' are writter to process data; now that we have our vertex data loaded into OpenGL, we need to write a vertex shader and a fragment shader to process it. First, our vertex shader:
+
+~~~ js
+var glslVertexSource = `
+uniform float scale;
+uniform float aspect;
+attribute vec2 position;
+
+void main() {
+  gl_Position = vec4(position.x / scale / aspect, position.y / scale, 0.5, 1.0);
+}
+`;
+~~~
+
+And our fragment shader:
+
+~~~ js
+var glslFragmentSource = `
+precision mediump float;
+
+void main() {
+  gl_FragColor = vec4(0.4, 0.5, 0.6, 1.0);
+}
+`;
 ~~~
