--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -5,7 +5,7 @@ excerpt: "..."
 ready: false
 ---
 
-OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment. At the end of this tutorial we'll have code to render a triangle; on its own this will take a good amount of setup, but from there it doesn't take much more work to build more advanced things.
+OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment. At the end of this tutorial we'll have code to render a triangle; on its own this will take a good amount of setup, but from there it doesn't take much more work to build more advanced things. Keep in mind that throughout this tutorial we'll pass over some chunks of code without going into too much detail about what's going on; OpenGL is a large API that's difficult to cover in detail in any single tutorial.
 
 Populate an `index.html` file with the following:
 
@@ -46,7 +46,6 @@ var canvas;
 var gl;
 var program;
 var attrPosition;
-var attrColor;
 var unfmScale;
 var unfmAspect;
 var triangleBuffer;
@@ -81,7 +80,7 @@ gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(triangleMesh), gl.STATIC_DRAW);
 ~~~
 
-In modern graphics frameworks, 'shaders' are writter to process data; now that we have our vertex data loaded into OpenGL, we need to write a vertex shader and a fragment shader to process it. First, our vertex shader:
+In modern graphics frameworks, 'shaders' are written to process data; now that we have our vertex data loaded into OpenGL, we need to write a vertex shader and a fragment shader to process it. First, our vertex shader:
 
 ~~~ js
 var glslVertexSource = `
@@ -105,4 +104,96 @@ void main() {
   gl_FragColor = vec4(0.4, 0.5, 0.6, 1.0);
 }
 `;
+~~~
+
+We now need to compile these into a GLSL 'program' that we can draw with:
+
+~~~ js
+function createShader(source, type) {
+  var shader = gl.createShader(type);
+  gl.shaderSource(shader, source);
+  gl.compileShader(shader);
+
+  // report any errors from compiling the shader
+  if(!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+    alert("error compiling " + (type == gl.VERTEX_SHADER ? "vertex" : "fragment") + " shader: " + gl.getShaderInfoLog(shader));
+  }
+
+  return shader;
+}
+
+function createProgram(vertexSource, fragmentSource) {
+  var program = gl.createProgram();
+  var vertexShader = createShader(vertexSource, gl.VERTEX_SHADER);
+  var fragmentShader = createShader(fragmentSource, gl.FRAGMENT_SHADER);
+  gl.attachShader(program, vertexShader);
+  gl.attachShader(program, fragmentShader);
+  gl.linkProgram(program);
+  return program;
+}
+~~~
+
+Now we can compile our GLSL and use the shader program. We have a couple variables that we want to be able to access through our JavaScript; we'll want to get their IDs (locations) so that we can access them:
+
+~~~ js
+program = createProgram(glslVertexSource, glslFragmentSource);
+unfmScale = gl.getUniformLocation(program, "scale");
+unfmAspect = gl.getUniformLocation(program, "aspect");
+attrPosition = gl.getAttribLocation(program, "position");
+~~~
+
+Now we're actually able to draw!
+
+~~~ js
+function draw() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  // set the aspect ratio
+  gl.uniform1f(unfmAspect, canvas.width / canvas.height);
+
+  // draw to the whole canvas and clear to the background color
+  gl.viewport(0, 0, canvas.width, canvas.height);
+  gl.clear(gl.COLOR_BUFFER_BIT);
+
+  gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
+  gl.vertexAttribPointer(attrPosition, 2, gl.FLOAT, false, 4 * 2, 0);
+  gl.drawArrays(gl.TRIANGLES, 0, 3);
+
+  gl.flush();
+  window.requestAnimationFrame(draw);
+}
+~~~
+
+This might look a little foreign so we'll walk through it step by step.
+
+As mentioned earlier, we need to resize the canvas to fit the window:
+
+~~~ js
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+~~~
+
+Send the aspect ratio (window width / window height) to our shader:
+
+~~~ js
+gl.uniform1f(unfmAspect, canvas.width / canvas.height);
+~~~
+
+Set OpenGL's viewport to the whole canvas and fill it with the clear color:
+
+~~~ js
+gl.viewport(0, 0, canvas.width, canvas.height);
+gl.clear(gl.COLOR_BUFFER_BIT);
+~~~
+
+Here we finally render our triangle:
+
+~~~ js
+// use our triangle buffer as the active buffer
+gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
+// tell our vertex shader how to get the `vec2 position` from our data, more on this later
+gl.vertexAttribPointer(attrPosition, 2, gl.FLOAT, false, 4 * 2, 0);
+// draw a triangle with the first three vertices
+gl.drawArrays(gl.TRIANGLES, 0, 3);
 ~~~
