--- a/_posts/2016-12-30-webgl.md
+++ b/_posts/2016-12-30-webgl.md
@@ -192,8 +192,15 @@ Here we finally render our triangle:
 ~~~ js
 // use our triangle buffer as the active buffer
 gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
-// tell our vertex shader how to get the `vec2 position` from our data, more on this later
+// tell our vertex shader how to get the position from our data, more on this later
 gl.vertexAttribPointer(attrPosition, 2, gl.FLOAT, false, 4 * 2, 0);
 // draw a triangle with the first three vertices
 gl.drawArrays(gl.TRIANGLES, 0, 3);
+~~~
+
+After we tell OpenGL to draw, we need to push the drawn frame to our `<canvas>` and run the draw function again next frame:
+
+~~~ js
+gl.flush();
+window.requestAnimationFrame(draw);
 ~~~
