--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Getting started with WebGL"
-excerpt: "..."
+excerpt: "OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; WebGL is a JavaScript API that allows us to use OpenGL inside a web browser environment."
 ready: false
 ---
 
@@ -140,6 +140,14 @@ program = createProgram(glslVertexSource, glslFragmentSource);
 unfmScale = gl.getUniformLocation(program, "scale");
 unfmAspect = gl.getUniformLocation(program, "aspect");
 attrPosition = gl.getAttribLocation(program, "position");
+
+gl.enableVertexAttribArray(attrPosition);
+
+gl.useProgram(program);
+
+gl.uniform1f(unfmScale, 2.2); // set the 'scale' uniform to a custom value
+
+draw(); // implemented later
 ~~~
 
 Now we're actually able to draw!
