--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -101,7 +101,7 @@ var glslFragmentSource = `
 precision mediump float;
 
 void main() {
-  gl_FragColor = vec4(0.4, 0.5, 0.6, 1.0);
+  gl_FragColor = vec4(0.8, 0.5, 0.4, 1.0);
 }
 `;
 ~~~
@@ -145,7 +145,7 @@ gl.enableVertexAttribArray(attrPosition);
 
 gl.useProgram(program);
 
-gl.uniform1f(unfmScale, 2.2); // set the 'scale' uniform to a custom value
+gl.uniform1f(unfmScale, 2.1); // set the 'scale' uniform to a custom value
 
 draw(); // implemented later
 ~~~
@@ -212,3 +212,7 @@ After we tell OpenGL to draw, we need to push the drawn frame to our `<canvas>` 
 gl.flush();
 window.requestAnimationFrame(draw);
 ~~~
+
+If all is well, at this point we should be able to open our page and see a triangle:
+
+<img src="{{ site.url }}/assets/webgl-triangle-1.png" style="border:none; width: 100%;">
