--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -215,4 +215,4 @@ window.requestAnimationFrame(draw);
 
 If all is well, at this point we should be able to open our page and see a triangle:
 
-<img src="{{ site.url }}/assets/webgl-triangle-1.png" style="border:none; width: 100%;">
+<img src="{{ site.url }}/assets/webgl-tri-1.png" style="border:none; width: 100%;">
