--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -213,6 +213,8 @@ gl.flush();
 window.requestAnimationFrame(draw);
 ~~~
 
-If all is well, at this point we should be able to open our page and see a triangle:
+Hopefully at this point you should be able to open your `index.html` and see this:
 
 <img src="{{ site.url }}/assets/webgl-tri-1.png" style="border:none; width: 100%;">
+
+If not, you can always refer to the sample code on this tutorial's [repository](https://github.com/lnpalmer/webgl-intro).
